--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
-fastapi==0.111.0
-uvicorn[standard]==0.30.0
+fastapi
+uvicorn[standard]
 SQLAlchemy==2.0.30
-aiomysql==0.2.0
-pydantic==2.7.1
-alembic==1.13.1
-PyMySQL==1.1.0
-python-dotenv==1.0.1
+aiomysql
+python-dotenv
+cryptography
+
+pytest
+pytest-asyncio
+httpx
+python-dotenv
