--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,9 +22,11 @@ services:
 
   api:
     build: .
+    container_name: cryptoforecast-api
     environment:
       # Async DSN for the running app
       DATABASE_URL: mysql+aiomysql://myuser:userpass123@mysql:3306/cryptoforecasedatabase
+      # DATABASE_URL: mysql+aiomysql://appuser:apppass123@mysql:3306/cryptoforecasedatabase?charset=utf8mb4
       SQL_ECHO: "0"
     depends_on:
       mysql:
@@ -33,7 +35,8 @@ services:
       - "8080:8080"
     # Use wget OR curl; ensure your Dockerfile installs one of them
     healthcheck:
-      test: ["CMD", "wget", "-qO-", "http://localhost:8080/healthz"]
+      # test: ["CMD", "wget", "-qO-", "http://localhost:8080/healthz"]
+      test: ["CMD", "curl", "-fsS", "http://localhost:8080/healthz"]
       # Alternative:
       # test: ["CMD-SHELL", "curl -fsS http://localhost:8080/healthz || exit 1"]
       interval: 10s
