--- a/docker-compose.Initial.yml
+++ b/docker-compose.Initial.yml
@@ -17,52 +17,32 @@ services:
       retries: 30
     volumes:
       - mysql_data:/var/lib/mysql
-      - ./init.sql:/docker-entrypoint-initdb.d/init.sql
+      - ./init.sql:/docker-entrypoint-initdb.d/init.sql      # Initialize database with tables
     restart: unless-stopped
-    networks:
-      - cryptoforecast_net
 
   api:
     build: .
     container_name: cryptoforecast-api
     environment:
+      # Async DSN for the running app
       DATABASE_URL: mysql+aiomysql://myuser:userpass123@mysql:3306/cryptoforecastdatabase
+      # DATABASE_URL: mysql+aiomysql://appuser:apppass123@mysql:3306/cryptoforecastdatabase?charset=utf8mb4
       SQL_ECHO: "0"
     depends_on:
       mysql:
         condition: service_healthy
     ports:
       - "8080:8080"
+    
     healthcheck:
       test: ["CMD", "curl", "-fsS", "http://localhost:8080/healthz"]
       interval: 10s
       timeout: 3s
       retries: 12
     volumes:
+      # Hot reload during development (optional)
       - ./app:/app/app
     restart: unless-stopped
-    networks:
-      - cryptoforecast_net
-
-  localstack:
-    image: localstack/localstack:latest
-    ports:
-      - "4566:4566"
-    environment:
-      - SERVICES=events,scheduler,lambda,sqs,iam
-      - DEBUG=1
-      - DATA_DIR=/tmp/localstack_data
-      - DOCKER_HOST=tcp://host.docker.internal:2375
-    volumes:
-      # - "C:/Users/mikel/localstack_data:/tmp/localstack_data"
-      - "C:/Users/mikel/OneDrive/_Projects/CryptoForecast/CryptoForecastSolution/localstack:/tmp/localstack_data"
-      - "//var/run/docker.sock:/var/run/docker.sock"
-    networks:
-      - cryptoforecast_net
-
-networks:
-  cryptoforecast_net:
-    driver: bridge
 
 volumes:
   mysql_data: {}
